[project]
name = "hello-marimo-smoldocling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "black>=25.1.0",
    "docling-core>=2.26.1",
    "flake8>=7.2.0",
    "marimo[recommended]>=0.12.8",
    "torch>=2.6.0",
    "transformers>=4.51.2",
]
